--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script   src="http://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
 </head>
 <body>
-	<form id="search-term">
+	<form id="search-form">
   		<input type="text" id="query">
   		<br>
   		<input type="submit" value="Submit">
